--- a/.babelrc
+++ b/.babelrc
@@ -4,5 +4,11 @@
       "es2015": { "modules": false }
     }],
     "stage-3"
-  ]
+  ],
+  "plugins": [["component", [
+    {
+      "libraryName": "mint-ui",
+      "style": true
+    }
+  ]]]
 }
