--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.16.1",
     "fastclick": "^1.0.6",
+    "mint-ui": "^2.2.7",
     "vue": "^2.2.1",
     "vue-awesome-swiper": "^2.4.2",
     "vue-router": "^2.5.3",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
+    "babel-plugin-component": "^0.9.1",
     "babel-preset-latest": "^6.0.0",
     "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^3.0.0",
